--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 350px;
+    /* height: 350px; */
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 .card > div{
     margin-top: 25px;
@@ -14,21 +16,22 @@
     font-size: 25px;
 }
 
-.input input{
+.input textarea{
     border-radius: 50px;
-    padding: 12px 30px;
+    padding: 25px 35px;
     width: 500px;
     border: 1px solid var(--primary-color-trans);
     transition: all .3s;
+    overflow: hidden;
 }
-.input input:focus{
+.input textarea:focus{
     outline: none;
     -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
     -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
     box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
     transform: scale(1.1);
 }
-.input input::placeholder{
+.input textarea::placeholder{
     font-weight: bold;
     opacity: .5;
 }
