--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -3,10 +3,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* height: 350px; */
-    padding-top: 80px;
-    padding-bottom: 80px;
+    min-height: calc(100vh - 60px);
+    padding-top: 40px;
+    padding-bottom: 40px;
+    /* margin-top: -120px; */
 }
+
+
 .card > div{
     margin-top: 25px;
     margin-bottom: 25px;
@@ -14,6 +17,7 @@
 
 .title{
     font-size: 25px;
+    margin: 0;
 }
 
 .input textarea{
@@ -23,13 +27,14 @@
     border: 1px solid var(--primary-color-trans);
     transition: all .3s;
     overflow: hidden;
+    resize: none;
 }
+
 .input textarea:focus{
     outline: none;
     -webkit-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
     -moz-box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
     box-shadow: 0px 0px 16px -1px rgba(0,0,0,0.15);
-    transform: scale(1.1);
 }
 .input textarea::placeholder{
     font-weight: bold;
@@ -62,3 +67,19 @@
     font-size: 18px;
     margin-right: 10px;
 }
+
+.inactive{
+    background-color: #e4e4e4 !important;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .input textarea{
+        width: 270px;
+    }
+    .card {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
