--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,4 +1,5 @@
 
+
 .container {
     position: fixed;
     bottom: 0;
@@ -20,4 +21,8 @@
     margin: 0;
     font-weight: bold;
     font-size: 15px;
+    color: white;
+}
+.container div footer p i{
+    color: white;
 }
