--- a/components/pagination/pagination.module.css
+++ b/components/pagination/pagination.module.css
@@ -1,32 +1,54 @@
+.cont{
+  display: flex;
+  justify-content: center;
+}
+
 .card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #11112f;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    -webkit-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    -moz-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    transition: all .3s;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 100px;
+  width: 220px;
 }
 
-.card:hover{
-    transform: scale(1.05) rotate(.8deg);
-    
+.card > div {
+  margin: 5px;
 }
 
-.divimg img{
-  border-radius: 18px;
-  width: 100%;
+.line{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: inherit;
 }
-.name{
-    font-size: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
-    color: #ffffffb5 !important;
+
+.line > div {
+  margin: 5px;
+}
+
+.btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  color: white;
+  background-color: var(--primary-color-var) !important;
+}
+
+.divinput input{
+  border-radius: 25px;
+  text-align: center;
+  height: 43px;
+  color: white;
+  font-size: 21px;
+  width: 110px;
+  background-color: #11112f;
+  border: solid 2px var(--primary-color-var);
+}
+
+.numbercenter{
+  color: white;
+  font-size: 21px;
 }
