--- a/components/cards/pod/pod.module.css
+++ b/components/cards/pod/pod.module.css
@@ -1,45 +1,57 @@
 .card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #11112f;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    -webkit-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    -moz-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
-    transition: all .3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #11112f;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
+  -moz-box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
+  box-shadow: 0px 0px 33px -9px rgba(255,255,255,.5);
+  transition: all .3s;
 }
 
 .card:hover{
-    transform: scale(1.05) rotate(.8deg);
-    
+  transform: scale(1.05) rotate(.8deg); 
 }
 
-.divimg img{
-  border-radius: 18px;
+.divimg div span{
+  width: inherit;
+  background-color: center;
+}
+
+.divimg div span img{
+  height: 270px;
+  border-radius: 10px;
+  object-fit: cover;
   width: inherit;
 }
 
 .divimg iframe{
-  border-radius: 18px;
+  border-radius: 10px;
   width: inherit;
-  height: 250px;
+  height: 270px !important;
   border: none;
+  background-color: black;
 }
 
 .divimg{
-  
   width: 100%;
+  height: 270px;
+}
+
+.divimg div{
+  width: inherit;
 }
 
 .name{
-    font-size: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
-    color: #ffffffb5 !important;
+  font-size: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  height: 55px;
+  text-align: center;
+  color: #ffffffb5 !important;
 }
