--- a/pages/day/day.module.css
+++ b/pages/day/day.module.css
@@ -1,29 +1,56 @@
 .date{
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
 }
+
 .title{
-  margin-top: 30px;
-  margin-bottom: 50px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .imgcont{
   width: 100%;
 }
-.imgcont img{
+
+.imgcont img, .imgcont iframe{
   border-radius: 5px;
   width: inherit;
 }
+
 .copyright{
+  margin-top: 30px;
+  margin-bottom: 5px;
   font-size: 16px;
 }
+
+.copyright b{
+  margin-right: 10px;
+}
+
 .explanation{
   text-indent: 1.5em;
   text-align: justify;
+  margin-top: 25px;
   margin-bottom: 80px;
 }
 
 .explanation::first-letter{
   font-size: 20px;
   font-weight: bold;
+}
+
+.imgcont iframe{
+  height: 300px
+}
+
+@media only screen and (min-width: 500px) {
+  .imgcont iframe{
+    height: 500px
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .imgcont iframe{
+    height: 700px
+  }
 }
