--- a/public/custom/css/styles.css
+++ b/public/custom/css/styles.css
@@ -66,3 +66,10 @@ h1{
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+@media (max-width: 767.98px) { 
+  .container{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
