--- a/components/pagination/pagination.module.css
+++ b/components/pagination/pagination.module.css
@@ -35,6 +35,20 @@
   border-radius: 50%;
   color: white;
   background-color: var(--primary-color-var) !important;
+  transition: all .2s
+}
+
+.btn i{
+  transition: all .2s
+}
+
+.btn:hover, .btn:focus{
+  transform: scale(1.1);
+  background-color: #FFD061 !important;
+}
+
+.btn:hover > i, .btn:focus > i{
+  color: black !important;
 }
 
 .divinput input{
@@ -46,6 +60,12 @@
   width: 110px;
   background-color: #11112f;
   border: solid 2px var(--primary-color-var);
+  transition: all .2s
+}
+
+.divinput input:hover, .divinput input:focus{
+  transform: scale(1.1);
+  border-color: #FFD061 !important;
 }
 
 .numbercenter{
