--- a/components/utils/nav/nav.module.css
+++ b/components/utils/nav/nav.module.css
@@ -1,10 +1,8 @@
-.container {
-  display: flex;
+.cont{
   width: 100%;
   position: fixed;
   z-index: 100 !important;
   background-color: var(--primary-color);
-  margin: 0 !important;
 }
 
 .space{
