--- a/components/cards/social/social.module.css
+++ b/components/cards/social/social.module.css
@@ -2,11 +2,12 @@
   display: flex;
 }
 
-.card:hover, .card:focus{
-  transform: scale();
+.card a:hover, .card a:focus{
+  transform: scale(1.1);
 }
 
 .card a{
+  transition: all .2s;
   display: flex;
   width: 40px;
   height: 40px;
