--- a/public/custom/css/btns.css
+++ b/public/custom/css/btns.css
@@ -6,13 +6,19 @@
 .btn-custom a{
   margin-top: 15px;
   margin-bottom: 40px;
-  padding: 15px 25px;
+  padding: 12px 25px;
   background-color: #FFD061;
   border-radius: 45px;
   color: black;
   font-weight: bold;
   cursor: pointer;
   transition: all .24s;
+}
+
+.btn-custom a i{
+  font-size: 18px;
+  color: black;
+  margin-right: 12px;
 }
 
 .btn-custom a:hover{
