--- a/components/modals/day/modalday.module.css
+++ b/components/modals/day/modalday.module.css
@@ -1,73 +1,81 @@
-.cont{
+.contaside{
+  display: block;
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  background-color: var(--primary-color);
+  color: #fff;
+  width: 0;
+  overflow: auto;
+  transition: all .5s;
+  border-left: none;
+  overflow-y: auto;
+  overflow-x: hidden;
+  overscroll-behavior-y: contain;;
+  z-index: 250;
+}
+
+.contasideativado{
+  width: 100% !important;
+}
+
+.contasidefix{
   display: flex;
   position: fixed;
-  height: 0vh;
-  top: 0;
-  z-index: 100;
-  transition: all .24s;
-}
-
-.open{
-  height: 100%;
-  transition: all .24s;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.scroll{
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  transition: all .24s;
-  overflow-y: auto;
-  overscroll-behavior-y: contain;
-
-  /* padding-top: 60px; */
-}
-
-.nav{
-  display: flex;
-  height: 60px;
-  width: 100%;
+  flex-direction: column;
   background-color: var(--primary-color);
-  z-index: 2000;
+  width: 100%;
 }
 
-.item{
-  display: flex;
-  justify-content: flex-end;
-}
-
-.item a{
+.headercont{
   display: inline-flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  height: 60px;
   padding-left: 15px;
   padding-right: 15px;
-  color: #fff;
-  font-size: 17px;
-  transition: all .3s;
-  height: 60px;
-  width: 60px;
-  border-radius: 45px;
-  cursor: pointer;
+}
+
+.headercont p{
+  display: flex;
+  color: white;
+  font-size: 20px;
+  margin: 0;
+}
+
+.headercont a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
+  background-color: white;
+  transition: all .3s;
+  cursor: pointer;
 }
 
-.item a i{
+.headercont a:hover{
+  transform: scale(1.1);
+}
+
+.headercont a i{
   font-size: 23px;
-  color: #fff;
+  color: var(--primary-color);
 }
 
-.item a:hover{
-  background-color: var(--primary-color-var);
-  text-decoration: none;
-  color: #fff;
-  transform: scale(1.20);
+.spacer{
+  height: 60px;
 }
 
-.preday{
-  height: 30px;
+.img {
+  display: inline-flex;
+  height: inherit;
+  align-items: center;
 }
 
+.img img{
+  height: 48px;
+}
