--- a/public/custom/css/template.css
+++ b/public/custom/css/template.css
@@ -27,12 +27,16 @@
   width: 4px !important;
 }
 
+*.scroll-off::-webkit-scrollbar {
+  width: 0px !important;
+}
+
 *::-webkit-scrollbar-track {
   box-shadow: inset 0 0 4px white;
 }
 
 *::-webkit-scrollbar-thumb {
-  background: var(--primary-color-var);
+  background: var(--primary-color);
   border-radius: 10px;
 }
 
