--- a/components/modals/day/modalday.module.css
+++ b/components/modals/day/modalday.module.css
@@ -22,6 +22,10 @@
   z-index: 250;
 }
 
+.contaside::-webkit-scrollbar {
+  width: 0px !important;
+}
+
 .contasideativado{
   width: 100% !important;
 }
