--- a/public/custom/css/template.css
+++ b/public/custom/css/template.css
@@ -67,6 +67,23 @@ h1{
   margin-top: 45px;
 }
 
+.text-container{
+  display: flex;
+  justify-content: center;
+}
+
+.text-container p {
+  text-indent: 1.5em;
+  text-align: justify;
+  margin-top: 5px;
+  max-width: 300px;
+}
+
+.text-container p::first-letter{
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .per{
   text-indent: 1.5em;
   text-align: justify;
