--- a/components/utils/nav/nav.module.css
+++ b/components/utils/nav/nav.module.css
@@ -55,8 +55,9 @@
   width: 60px;
 }
 
-.seta i{
-  font-size: 23px;
+.seta svg{
+  width: 28px;
+  height: 28px;
   color: #fff;
 }
 
@@ -120,18 +121,19 @@
   height: 40px;
   width: 40px;
   border-radius: 50%;
-  background-color: white;
+  /* background-color: white; */
   transition: all .3s;
   cursor: pointer;
 }
 
 .headercont a:hover{
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
-.headercont a i{
-  font-size: 23px;
-  color: var(--primary-color);
+.headercont a svg{
+  width: 25px;
+  height: 25px;
+  color: var(--primary-color) !important;
 }
 
 .menulist{
@@ -156,8 +158,9 @@
   width: 50px;
 }
 
-.menuitem span i{
-  font-size: 20px;
+.menuitem span svg{
+  width: 23px;
+  height: 23px;
   color: white;
 }
 
