--- a/public/custom/css/datepicker.css
+++ b/public/custom/css/datepicker.css
@@ -27,6 +27,8 @@
   color: white;
   margin-left: 2px;
   margin-right: 4px;
+  /* padding-top: 4px;
+  padding-bottom: 4px; */
   transition: all .2s;
 }
 
@@ -36,6 +38,13 @@
   box-shadow: 0px 0px 0px 2px rgba(255,208,97,1);
   transform: scale(1.1);
   outline: 0;
+}
+
+.date-picker__custom-head button svg{
+  padding-top: 4px;
+  width: 16px;
+  height: 16px;
+ 
 }
 
 .date-picker__custom-head select::after{
