--- a/components/content/images/imagescontent.module.css
+++ b/components/content/images/imagescontent.module.css
@@ -38,7 +38,9 @@
   transition: all .2s
 }
 
-.btn i{
+.btn svg{
+  height: 25px;
+  width: 25px;
   transition: all .2s
 }
 
@@ -47,7 +49,7 @@
   background-color: #FFD061 !important;
 }
 
-.btn:hover > i, .btn:focus > i{
+.btn:hover > svg, .btn:focus > svg{
   color: black !important;
 }
 
