--- a/components/utils/offline/offline.module.css
+++ b/components/utils/offline/offline.module.css
@@ -17,11 +17,11 @@
   font-size: 25px;
 }
 
-
 .text{
   display: inline;
   width: 120px;
   transition: all .3s;
+  color: white;
 }
 
 .text p{
@@ -30,12 +30,12 @@
   width: 120px;
  }
 
-/* .open p{
-  width: 120px;
-} */
-
-
 .close {
   width: 0;
+}
 
+.icon{
+  height: 25px;
+  width: 25px;
+  color: white;
 }
