--- a/components/content/day/day.module.css
+++ b/components/content/day/day.module.css
@@ -26,7 +26,7 @@
   font-size: 20px;
   color: white;
   border-radius: 5px;
-  width: inherit;
+  width: 100%;
   height: 100%;
 }
 
@@ -39,7 +39,7 @@
 
 .imgcont img{
   border-radius: 5px;
-  width: inherit;
+  max-width: inherit;
   height: 100%;
 } 
 
