--- a/components/cards/social/social.module.css
+++ b/components/cards/social/social.module.css
@@ -11,13 +11,13 @@
   display: flex;
   width: 40px;
   height: 40px;
-  margin-left: 7px;
-  margin-right: 7px;
+  justify-content: center;
+  align-items: center;
 }
 
 .card a svg{
-  width: 27px;
-  height: 27px;
+  width: 24px;
+  height: 24px;
   color: white;
   transition: all .15s;
 }
