--- a/components/content/day/day.module.css
+++ b/components/content/day/day.module.css
@@ -83,6 +83,11 @@
   margin-top: 30px;
 }
 
+.btn{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 @media only screen and (min-width: 500px) {
   .imgcont iframe{
     height: 500px
