Change bg color on home cards

--- a/components/content/dayRow/day.module.css
+++ b/components/content/dayRow/day.module.css
@@ -3,6 +3,6 @@
   padding-top: 20px;
   margin-bottom: 30px;
   padding-bottom: 20px;
-  background-color: rgba(255, 255, 255, 0.04);
+  background-color: #38387A;
   border-radius: 20px;
 }
