--- a/public/custom/css/template.css
+++ b/public/custom/css/template.css
@@ -55,7 +55,9 @@ body {
   padding: 0;
   margin: 0;
   background-color: var(--bg-primary);
+  content-visibility: auto;
 }
+
 a, a:hover, a:focus{
   text-decoration: none;
   color: none;
