--- a/src/components/cards/pod/pod.module.css
+++ b/src/components/cards/pod/pod.module.css
@@ -4,9 +4,11 @@
   align-items: center;
   background-color: #11112f;
   margin-top: 18px;
-  margin-bottom: 18px;
-  border-radius: 10px;
   margin-bottom: 120px;
+  border: none;
+  padding: 0;
+  outline: none;
+  width: 100%;
   border-radius: 10px 0 10px 0;
   -webkit-box-shadow: 0px 0px 33px -9px rgba(255, 255, 255, 0.5);
   -moz-box-shadow: 0px 0px 33px -9px rgba(255, 255, 255, 0.5);
@@ -33,7 +35,7 @@
 
 .divimg iframe {
   border-radius: 10px;
-  width: inherit;
+  width: 100%;
   height: 270px !important;
   border: none;
   border-radius: 10px 0 10px 0;
