--- a/src/components/utils/nav/nav.module.css
+++ b/src/components/utils/nav/nav.module.css
@@ -19,7 +19,7 @@
 
 .menu {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   height: inherit;
   padding: 0;
   margin: 0;
@@ -29,7 +29,8 @@
   height: inherit;
 }
 
-.menu li a {
+.menu li a,
+.menu li button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -37,27 +38,34 @@
   padding-right: 15px;
   color: #fff;
   font-size: 17px;
-  transition: all 0.3s;
+  transition: all 0.17s;
   height: inherit;
-  border-radius: 45px;
   cursor: pointer;
 }
 
-.menu li a:hover {
-  background-color: var(--primary-color-var);
+.menu li a:hover,
+.menu li button:hover {
+  background-color: #19194c;
   text-decoration: none;
   color: #fff;
-  transform: scale(1.2);
+  height: 75px;
+  border-radius: 0 0 17px 17px;
 }
 
-.seta {
-  border-radius: 50%;
-  width: 60px;
+.seta p {
+  padding-left: 10px;
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 768px) {
+  .seta p {
+    display: none;
+  }
 }
 
 .seta svg {
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
   color: #fff;
 }
 
@@ -102,7 +110,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 80px;
+  height: 30px;
+  margin-top: 20px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -114,7 +123,7 @@
   margin: 0;
 }
 
-.headercont a {
+.headercont button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,42 +135,43 @@
   cursor: pointer;
 }
 
-.headercont a:hover {
+.headercont button:hover {
   transform: scale(1.3);
 }
 
-.headercont a svg {
+.headercont button svg {
   width: 25px;
   height: 25px;
   color: #fff;
 }
 
 .menulist {
-  padding-left: 35px;
-  padding-right: 35px;
+  /* padding-left: 35px;
+  padding-right: 35px; */
 }
 
 .menuitem {
   display: flex;
   align-items: center;
-  height: 42px;
+  height: 48px;
+  width: 100%;
+  padding-left: 35px;
+  padding-right: 35px;
   transition: all 0.2s;
 }
 
 .menuitem:hover,
 .menuitem:focus {
-  transform: scale(1.05);
+  transform: scale(1.07);
   text-decoration: none;
+  background-color: #19194c;
   cursor: pointer;
 }
 
-.menuitem span {
-  width: 50px;
-}
-
-.menuitem span svg {
+.menuitem svg {
   width: 23px;
   height: 23px;
+  margin-right: 30px;
   color: white;
 }
 
@@ -175,7 +185,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .cardmenu div img {
