--- a/src/components/content/day/day.module.css
+++ b/src/components/content/day/day.module.css
@@ -30,19 +30,16 @@
   height: 100%;
 }
 
-.imgcont {
-  display: flex;
-  justify-content: center;
-}
-
 .imgcont a {
   display: flex;
+  position: relative;
   max-width: 100%;
+  height: 60vh;
 }
 
 .imgcont a img {
   width: 100%;
-  max-height: 72vh;
+  /* max-height: 72vh; */
   border-radius: 5px;
   object-fit: contain;
 }
