--- a/src/components/content/day/day.module.css
+++ b/src/components/content/day/day.module.css
@@ -30,17 +30,25 @@
   height: 100%;
 }
 
-.imgcont a {
+.imgcont {
   display: flex;
+  justify-content: center;
+}
+
+.imgcont a {
   position: relative;
-  max-width: 100%;
-  height: 60vh;
+  max-height: 60vh;
+  min-height: 5%;
+  width: 100%;
+  min-width: 5%;
+}
+
+.imgcont a div {
+  position: initial !important;
+  border-radius: 10px;
 }
 
 .imgcont a img {
-  width: 100%;
-  /* max-height: 72vh; */
-  border-radius: 5px;
   object-fit: contain;
 }
 
@@ -97,5 +105,11 @@
 @media only screen and (min-width: 700px) {
   .imgcont iframe {
     height: 700px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .imgcont a {
+    max-height: 42vh;
   }
 }
