--- a/src/components/content/dayRow/ImgSide/ImgSide.module.css
+++ b/src/components/content/dayRow/ImgSide/ImgSide.module.css
@@ -2,34 +2,44 @@
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
-  height: 100%;
+  padding: 0;
+  align-items: center;
+  background-color: black;
+  border-radius: 10px;
 }
 
 .framecont {
+  display: flex;
+  align-self: center;
   position: relative;
   width: 100%;
   padding-top: 56.25%;
+}
+
+.framewrap {
+  display: flex;
+  height: 300px;
+  width: 100%;
+  position: relative;
+  /* padding-bottom: 56.25%; */
+  /* height: 0; */
+  overflow: hidden;
 }
 
 .framecont iframe {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  text-align: center;
-  font-size: 20px;
-  color: white;
-  border-radius: 10px;
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 
 .imgcont a {
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 380px;
+  height: 340px;
 }
 
 .imgcont a img {
@@ -50,5 +60,33 @@
   .cont {
     margin-top: 0;
     margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 329px) {
+  .framewrap {
+    height: 230px;
+  }
+  .imgcont a {
+    height: 270px;
+  }
+}
+
+
+@media screen and (min-width: 330px) and (max-width: 668px) {
+  .framewrap {
+    height: 290px;
+  }
+  .imgcont a {
+    height: 310px;
+  }
+}
+
+@media screen and (min-width: 668px) and (max-width: 725px) {
+  .framewrap {
+    height: 350px;
+  }
+  .imgcont a {
+    height: 350px;
   }
 }
