fix: imagem link bug on card row

--- a/src/components/content/dayRow/ImgSide/ImgSide.module.css
+++ b/src/components/content/dayRow/ImgSide/ImgSide.module.css
@@ -38,8 +38,9 @@
 .imgcont a {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 340px;
+  border-radius: 10px;
 }
 
 .imgcont a img {
