--- a/src/components/content/day/day.module.css
+++ b/src/components/content/day/day.module.css
@@ -1,11 +1,12 @@
 .date {
-  margin-top: 30px;
-  text-align: center;
+  margin-top: 0;
+  text-align: left;
   color: white;
 }
 
 .title {
-  margin-top: 10px;
+  margin-top: 0;
+  text-align: left;
   margin-bottom: 30px;
   color: white;
 }
@@ -30,43 +31,39 @@
   height: 100%;
 }
 
+.hLock {
+  margin-top: 70px;
+}
+
 .imgcont {
   display: flex;
-  justify-content: center;
-  max-height: 1000px;
-  min-height: 400px;
+  justify-content: flex-start;
 }
 
 .imgcont a {
   position: relative;
-  height: 65vh;
+  display: flex;
+  justify-items: flex-start;
   max-width: 100%;
-  width: 100%;
+  min-width: 100%;
 }
 
-.imgcont a div {
-  position: initial !important;
-  border-radius: 10px;
-}
-
-.imgcont a span img {
-  width: 100%;
+.imgcont a img {
+  width: auto !important;
+  height: auto !important;
+  max-height: 70vh;
+  max-width: 100%;
 }
 
 .copyright {
-  margin-top: 20px;
-  margin-bottom: 5px;
-  font-size: 16px;
+  display: flex;
+  margin-bottom: 20px;
+  font-size: 12px;
   color: white;
 }
 
 .copyright b {
   margin-right: 10px;
-}
-
-.explanationtitle {
-  margin-top: 25px;
-  color: white;
 }
 
 .explanation {
@@ -88,13 +85,19 @@
 
 .socialcont {
   display: flex;
-  justify-content: flex-end;
-  margin-top: 30px;
+  justify-content: flex-start;
 }
 
 .btn {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.btnsCount{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media only screen and (min-width: 500px) {
